--- a/waylandshells/xdg-shell/CMakeLists.txt
+++ b/waylandshells/xdg-shell/CMakeLists.txt
@@ -4,9 +4,11 @@
 # For license and copyright information please follow this link:
 # https://github.com/desktop-app/legal/blob/master/LEGAL
 
-find_package(ECM REQUIRED)
-set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
-find_package(QtWaylandScanner REQUIRED)
+if (NOT DESKTOP_APP_QT6)
+    find_package(ECM REQUIRED)
+    set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+    find_package(QtWaylandScanner REQUIRED)
+endif()
 
 add_library(lib_waylandshells_xdg_shell STATIC)
 add_library(desktop-app::lib_waylandshells::xdg_shell ALIAS lib_waylandshells_xdg_shell)
@@ -15,15 +17,23 @@ init_target(lib_waylandshells_xdg_shell)
 get_filename_component(src_loc . REALPATH)
 set_target_properties(lib_waylandshells_xdg_shell PROPERTIES AUTOMOC ON)
 
-ecm_add_qtwayland_client_protocol(xdg_shell_protocol_srcs
-    PROTOCOL ${src_loc}/xdg-shell.xml
-    BASENAME xdg-shell
-)
+if (DESKTOP_APP_QT6)
+    qt6_generate_wayland_protocol_client_sources(lib_waylandshells_xdg_shell
+    FILES
+        ${src_loc}/xdg-shell.xml
+        ${src_loc}/xdg-decoration-unstable-v1.xml
+    )
+else()
+    ecm_add_qtwayland_client_protocol(xdg_shell_protocol_srcs
+        PROTOCOL ${src_loc}/xdg-shell.xml
+        BASENAME xdg-shell
+    )
 
-ecm_add_qtwayland_client_protocol(xdg_decoration_protocol_srcs
-    PROTOCOL ${src_loc}/xdg-decoration-unstable-v1.xml
-    BASENAME xdg-decoration-unstable-v1
-)
+    ecm_add_qtwayland_client_protocol(xdg_decoration_protocol_srcs
+        PROTOCOL ${src_loc}/xdg-decoration-unstable-v1.xml
+        BASENAME xdg-decoration-unstable-v1
+    )
+endif()
 
 nice_target_sources(lib_waylandshells_xdg_shell ${src_loc}
 PRIVATE
@@ -36,11 +46,13 @@ PRIVATE
     qwaylandxdgshellintegration_p.h
 )
 
-target_sources(lib_waylandshells_xdg_shell
-PRIVATE
-    ${xdg_shell_protocol_srcs}
-    ${xdg_decoration_protocol_srcs}
-)
+if (NOT DESKTOP_APP_QT6)
+    target_sources(lib_waylandshells_xdg_shell
+    PRIVATE
+        ${xdg_shell_protocol_srcs}
+        ${xdg_decoration_protocol_srcs}
+    )
+endif()
 
 target_include_directories(lib_waylandshells_xdg_shell
 PRIVATE
