Get rid of KDE frameworks usage

--- a/waylandshells/xdg-shell/CMakeLists.txt
+++ b/waylandshells/xdg-shell/CMakeLists.txt
@@ -4,12 +4,6 @@
 # For license and copyright information please follow this link:
 # https://github.com/desktop-app/legal/blob/master/LEGAL
 
-if (NOT DESKTOP_APP_QT6)
-    find_package(ECM REQUIRED)
-    set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
-    find_package(QtWaylandScanner REQUIRED)
-endif()
-
 add_library(lib_waylandshells_xdg_shell STATIC)
 add_library(desktop-app::lib_waylandshells::xdg_shell ALIAS lib_waylandshells_xdg_shell)
 init_target(lib_waylandshells_xdg_shell)
@@ -25,20 +19,7 @@ if (DESKTOP_APP_QT6)
         ${third_party_loc}/wayland-protocols/staging/xdg-activation/xdg-activation-v1.xml
     )
 else()
-    ecm_add_qtwayland_client_protocol(xdg_shell_protocol_srcs
-        PROTOCOL ${third_party_loc}/wayland-protocols/stable/xdg-shell/xdg-shell.xml
-        BASENAME xdg-shell
-    )
-
-    ecm_add_qtwayland_client_protocol(xdg_decoration_protocol_srcs
-        PROTOCOL ${third_party_loc}/wayland-protocols/unstable/xdg-decoration/xdg-decoration-unstable-v1.xml
-        BASENAME xdg-decoration-unstable-v1
-    )
-
-    ecm_add_qtwayland_client_protocol(xdg_activation_protocol_srcs
-        PROTOCOL ${third_party_loc}/wayland-protocols/staging/xdg-activation/xdg-activation-v1.xml
-        BASENAME xdg-activation-v1
-    )
+    message(FATAL_ERROR "This piece of cmake code is not ported to Qt 5")
 endif()
 
 nice_target_sources(lib_waylandshells_xdg_shell ${src_loc}
@@ -54,19 +35,9 @@ PRIVATE
     qwaylandxdgshellintegration_p.h
 )
 
-if (NOT DESKTOP_APP_QT6)
-    target_sources(lib_waylandshells_xdg_shell
-    PRIVATE
-        ${xdg_shell_protocol_srcs}
-        ${xdg_decoration_protocol_srcs}
-        ${xdg_activation_protocol_srcs}
-    )
-endif()
-
 target_include_directories(lib_waylandshells_xdg_shell
 PRIVATE
     ${src_loc}
-    ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 target_compile_options(lib_waylandshells_xdg_shell
@@ -82,10 +53,5 @@ PRIVATE
 target_link_libraries(lib_waylandshells_xdg_shell
 PRIVATE
     desktop-app::external_qt
+    desktop-app::external_wayland_client
 )
-
-if (DESKTOP_APP_USE_PACKAGED)
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(WAYLAND_CLIENT REQUIRED IMPORTED_TARGET wayland-client)
-    target_link_libraries(lib_waylandshells_xdg_shell PRIVATE PkgConfig::WAYLAND_CLIENT)
-endif()
